hphp/hack/test/typecheck/coeffects/poly_var_reassign/trivial.php.exp
File "trivial.php", line 4, characters 3-8:
This variable cannot be reassigned because it is used for a dependent context (Typing[4404])
File "trivial.php", line 10, characters 3-4:
Typing error (Typing[4110])
  File "trivial.php", line 10, characters 3-9:
  Expected `num` because this is used in an arithmetic operation
  File "trivial.php", line 7, characters 26-27:
  But got `vec<int>`
File "trivial.php", line 10, characters 3-9:
This variable cannot be reassigned because it is used for a dependent context (Typing[4404])
